tests/health/gold/sdk/tools__pkg__git__git.toit.gold
<pkg:pkg-http>/connection.toit:332:7: error: Missing implementations for interface methods
class DetachedSocket_ implements tcp.Socket:
      ^~~~~~~~~~~~~~~
<sdk>/net/tcp.toit:28:3: note: Missing implementation for 'in'
  in -> io.CloseableReader
  ^~
<sdk>/net/tcp.toit:29:3: note: Missing implementation for 'out'
  out -> io.CloseableWriter
  ^~~
<pkg:toit-cert-roots>/certificate_roots.toit:10750:29: warning: Deprecated 'CYBERTRUST-GLOBAL-ROOT'
  "Cybertrust Global Root": CYBERTRUST_GLOBAL_ROOT,
                            ^~~~~~~~~~~~~~~~~~~~~~
<pkg:toit-cert-roots>/certificate_roots.toit:10755:21: warning: Deprecated 'DST-ROOT-CA-X3'
  "DST Root CA X3": DST_ROOT_CA_X3,
                    ^~~~~~~~~~~~~~
<pkg:toit-cert-roots>/certificate_roots.toit:10766:13: warning: Deprecated 'EC-ACC'
  "EC-ACC": EC_ACC,
            ^~~~~~
<pkg:toit-cert-roots>/certificate_roots.toit:10781:30: warning: Deprecated 'GLOBALSIGN-ROOT-CA-R2'
  "GlobalSign Root CA - R2": GLOBALSIGN_ROOT_CA_R2,
                             ^~~~~~~~~~~~~~~~~~~~~
<pkg:toit-cert-roots>/certificate_roots.toit:10791:62: warning: Deprecated 'HELLENIC-ACADEMIC-AND-RESEARCH-INSTITUTIONS-ROOTCA-2011'
  "Hellenic Academic and Research Institutions RootCA 2011": HELLENIC_ACADEMIC_AND_RESEARCH_INSTITUTIONS_ROOTCA_2011,
                                                             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<pkg:toit-cert-roots>/certificate_roots.toit:10805:46: warning: Deprecated 'NETWORK-SOLUTIONS-CERTIFICATE-AUTHORITY'
  "Network Solutions Certificate Authority": NETWORK_SOLUTIONS_CERTIFICATE_AUTHORITY,
                                             ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<pkg:toit-cert-roots>/certificate_roots.toit:10829:39: warning: Deprecated 'STAAT-DER-NEDERLANDEN-EV-ROOT-CA'
  "Staat der Nederlanden EV Root CA": STAAT_DER_NEDERLANDEN_EV_ROOT_CA,
                                      ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<pkg:pkg-http>/connection.toit:354:20: warning: Deprecated 'Socket.read'
    return socket_.read
                   ^~~~
<pkg:pkg-http>/connection.toit:357:20: warning: Deprecated 'Socket.write'
    return socket_.write data from to
                   ^~~~~
<pkg:pkg-http>/connection.toit:360:13: warning: Deprecated 'Socket.close-write'
    socket_.close_write
            ^~~~~~~~~~~
<pkg:pkg-http>/connection.toit:89:15: warning: Deprecated 'Socket.close-write'
      socket_.close_write
              ^~~~~~~~~~~
<pkg:pkg-http>/web_socket.toit:56:20: warning: Deprecated 'Socket.read'
    return socket_.read
                   ^~~~
<pkg:pkg-http>/web_socket.toit:133:23: warning: Deprecated 'Socket.read'
      next := socket_.read
                      ^~~~
<pkg:pkg-http>/web_socket.toit:252:23: warning: Deprecated 'Socket.write'
      from += socket_.write data from to
                      ^~~~~
<pkg:pkg-http>/web_socket.toit:291:20: warning: Deprecated 'Socket.close-write'
    catch: socket_.close_write  // Catch because we allow double close, and a previous close causes an exception here.
                   ^~~~~~~~~~~
<pkg:pkg-http>/headers.toit:133:20: warning: Class 'Buffer' is deprecated
    buffer := bytes.Buffer
                   ^
<pkg:pkg-http>/client.toit:592:20: warning: Class 'Buffer' is deprecated
    buffer := bytes.Buffer
                   ^
<pkg:toit-cert-roots>/certificate_roots.toit:11093:3: warning: Deprecated 'CYBERTRUST-GLOBAL-ROOT'
  CYBERTRUST_GLOBAL_ROOT.install
  ^~~~~~~~~~~~~~~~~~~~~~
<pkg:toit-cert-roots>/certificate_roots.toit:11098:3: warning: Deprecated 'DST-ROOT-CA-X3'
  DST_ROOT_CA_X3.install
  ^~~~~~~~~~~~~~
<pkg:toit-cert-roots>/certificate_roots.toit:11109:3: warning: Deprecated 'EC-ACC'
  EC_ACC.install
  ^~~~~~
<pkg:toit-cert-roots>/certificate_roots.toit:11124:3: warning: Deprecated 'GLOBALSIGN-ROOT-CA-R2'
  GLOBALSIGN_ROOT_CA_R2.install
  ^~~~~~~~~~~~~~~~~~~~~
<pkg:toit-cert-roots>/certificate_roots.toit:11134:3: warning: Deprecated 'HELLENIC-ACADEMIC-AND-RESEARCH-INSTITUTIONS-ROOTCA-2011'
  HELLENIC_ACADEMIC_AND_RESEARCH_INSTITUTIONS_ROOTCA_2011.install
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<pkg:toit-cert-roots>/certificate_roots.toit:11148:3: warning: Deprecated 'NETWORK-SOLUTIONS-CERTIFICATE-AUTHORITY'
  NETWORK_SOLUTIONS_CERTIFICATE_AUTHORITY.install
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<pkg:toit-cert-roots>/certificate_roots.toit:11172:3: warning: Deprecated 'STAAT-DER-NEDERLANDEN-EV-ROOT-CA'
  STAAT_DER_NEDERLANDEN_EV_ROOT_CA.install
  ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<pkg:pkg-http>/connection.toit:35:21: warning: Class 'BufferedReader' is deprecated
    reader_ = reader.BufferedReader socket_
                    ^
